--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,9 @@ project(ModernCPP)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(ModernCPP main.cpp)
+find_package(raylib REQUIRED)
+add_compile_options(-Wall -Wextra -pedantic -Werror)
+add_definitions(-DVK_USE_PLATFORM_XCB_KHR)
+
+add_executable(ModernCPP main.cpp Lib/Window.h Lib/Window.cpp)
+target_link_libraries(ModernCPP PUBLIC raylib)
